--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body{
 #hero{
     width: 100%;
     height: 87svh;
-    background-color: red;
+    background-color: green;
 }
 
 .navbar{
@@ -593,19 +593,20 @@ font-family: 'Poppins', sans-serif;
         width: 300px;
         height: 200px;
     }
-    .hero-text {
-        height: auto;
-    }
     .hero-text{
         height: auto;
         text-align: center;
+        line-height: 20px;
     }
     .hero-text h2{
-        font-size: 40px;
+        font-size: 30px;
     }
     .hero-text h2 span::after{
         height: 60px;
+        top: -.5rem;
+        left: -1.5rem;
     }
+
     .btns {
         margin-top: 1rem;
     }
