--- a/style.css
+++ b/style.css
@@ -84,8 +84,7 @@ body{
 
 #hero{
     width: 100%;
-    height: 87svh;
-    background-color: green;
+    height: 100svh;
 }
 
 .navbar{
@@ -96,6 +95,10 @@ body{
     align-items: center;
     justify-content: space-between;
     transition: 0.3s linear height;
+    position: fixed;
+    position: -webkit-sticky;
+    top: 0;
+    z-index: 999999;
 }
 /* .navbar.clicked{
     align-items: flex-start;
@@ -133,8 +136,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 85vh;
-    min-height: 85vh;
+    height: 100vh;
+    min-height: 100vh;
     position: relative;
 }
 
@@ -583,8 +586,9 @@ font-family: 'Poppins', sans-serif;
     .container{
         padding: 1rem 1rem;
     }
-    .main-hero{
+    .main-hero {
         flex-wrap: wrap;
+        padding: 80px 0px;
     }
     .hero-img img{
         height: 200px;
@@ -596,15 +600,12 @@ font-family: 'Poppins', sans-serif;
     .hero-text{
         height: auto;
         text-align: center;
-        line-height: 20px;
     }
     .hero-text h2{
-        font-size: 30px;
+        font-size: 40px;
     }
     .hero-text h2 span::after{
         height: 60px;
-        top: -.5rem;
-        left: -1.5rem;
     }
 
     .btns {
