--- a/style.css
+++ b/style.css
@@ -669,7 +669,7 @@ font-family: 'Poppins', sans-serif;
     }
     #about{
         height: auto;
-        padding: 0;
+        padding-top: 5rem;
     }
     #skills{
         height: auto;
